--- a/index.html
+++ b/index.html
@@ -1,28 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pokemon Index</title>
-    <script src="poke.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
+
 <body>
-    <div id="header-container" class="ui inverted segment">
-        <div class="ui inverted secondary menu">
-           <h1 id="header-text">Kanto Pokemon</h1>
+
+    <!-- Hamburger Menu -->
+    <section id="hamburger-menu">
+        <div class="menu-container">
+            <div class="lines-container">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
         </div>
-    </div>
-    <div id="container">
-        <div id="poke-container" class="ui cards">
-                <!-- will hold the cards for all the pokemon -->
-                <button id="generate-pokemon" class="ui secondary button">Generate Pokemon</button>
-        </div>
-    </div>
-    <div id="delete-container">
-        <button id="delete-btn" class="ui red button">Delete</button>
-    </div>
+        <ul id="main-navbar">
+            <li><a href="#" id="active-link">Project Information</a></li>
+            <li><a href="search.html">Pokemon History</a></li>
+            <li><a href="about.html">About</a></li>
+        </ul>
+    </section>
+
+    <!-- Main Area -->
+    <section class="region-container">
+        <button class="region-button" id="kanto-button">Kanto</button>
+        <button class="region-button" id="johto-button">Johto</button>
+        <button class="region-button" id="hoenn-button">Hoenn</button>
+    </section>
+    <script src="poke.js"></script>
+
 </body>
+
 </html>
