--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta http-equiv="Permissions-Policy" content="interest-cohort=(self)">
-
     <title>Pokemon Index</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 
@@ -32,11 +30,16 @@
 
     <!-- Main Area -->
     <section class="region-container">
-        <button class="region-button" id="kanto-button">Kanto</button>
-        <button class="region-button" id="johto-button">Johto</button>
-        <button class="region-button" id="hoenn-button">Hoenn</button>
+        <button class="region-button" id="kanto-button" type="button">Kanto</button>
+        <button class="region-button" id="johto-button" type="button">Johto</button>
+        <button class="region-button" id="hoenn-button" type="button">Hoenn</button>
     </section>
-    <script src="poke.js"></script>
+
+    <section class="container">
+        <div id="poke-container" class="ui cards">
+        </div>
+
+        <script src="poke.js" type="text/javascript"></script>
 
 </body>
 
