--- a/index.html
+++ b/index.html
@@ -5,42 +5,97 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pokemon Index</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <title>Pokedex</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css" type="text/css">
+
 </head>
+
+
 
 <body>
 
-    <!-- Hamburger Menu -->
-    <section id="hamburger-menu">
-        <div class="menu-container">
-            <div class="lines-container">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
-            </div>
-        </div>
-        <ul id="main-navbar">
-            <li><a href="#" id="active-link">Project Information</a></li>
-            <li><a href="search.html">Pokemon History</a></li>
-            <li><a href="about.html">About</a></li>
-        </ul>
-    </section>
+    <div class="one bg-image">
+        <h1>Pokedex</h1>
 
-    <!-- Main Area -->
-    <section class="region-container">
-        <button class="region-button" id="kanto-button" type="button">Kanto</button>
-        <button class="region-button" id="johto-button" type="button">Johto</button>
-        <button class="region-button" id="hoenn-button" type="button">Hoenn</button>
-    </section>
+        <!-- Hamburger Menu -->
+        <section id="hamburger-menu">
+            <div class="menu-container">
+                <div class="lines-container">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
+            </div>
+            <ul id="main-navbar">
+                <li><a href="#" id="active-link">Project Information</a></li>
+                <li><a href="search.html">Pokemon History</a></li>
+                <li><a href="about.html">Contact </a></li>
+            </ul>
+        </section>
+
+        <!-- Main Area -->
+        <section class="region-container">
+            <div class="region">
+                <img src="docs/assets/images/kanto.png" alt="Kanto Region">
+                <button class="region-button" id="kanto-button" type="button">Kanto</button>
+            </div>
+            <div class="region">
+                <img src="docs/assets/images/jhoto.png" alt="Johto Region">
+                <button class="region-button" id="johto-button" type="button">Johto</button>
+            </div>
+            <div class="region">
+                <img src="docs/assets/images/hoenn.png" alt="Hoenn Region">
+                <button class="region-button" id="hoenn-button" type="button">Hoenn</button>
+            </div>
+        </section>
+    </div>
 
     <section class="container">
-        <div id="poke-container" class="ui cards">
+        <div id="poke-container" class="ui cards"></div>
+    </section>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <ul class="list-inline">
+                        <li class="list-inline-item"><a href="#" class="text-muted">Privacy Policy</a></li>
+                        <li class="list-inline-item"><a href="#" class="text-muted">Terms of Use</a></li>
+                        <li class="list-inline-item"><a href="#" class="text-muted">Contact Us</a></li>
+                    </ul>
+                    <p class="text-muted">&copy; 2023 SHMELUIZZE. All rights reserved.</p>
+                </div>
+            </div>
         </div>
+    </footer>
 
-        <script src="poke.js" type="text/javascript"></script>
+    <script src="poke.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        (function() {
+            const region = document.querySelector('.region-container'),
+                offset = region.offsetTop + 200;
 
+            setTimeout(() => {
+                window.scrollTo({
+                    top: offset,
+                    behavior: 'smooth'
+                })
+            }, 1000);
+        }());
+        // $(document).ready(function() {
+        //     if (window.location.hash === '') {
+        //         $('html, body').animate({
+        //             scrollTop: $('#region-container').offset().top
+        //         }, 1000);
+        //     }
+        // });
+
+        // $(window).on('beforeunload', function() {
+        //     $(window).scrollTop(0);
+        // });
+    </script>
 </body>
 
 </html>
